--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="description" content="Get alerts when a UNSW class has a free spot.">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/tutorifull.min.css') }}">
         <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}">
@@ -17,6 +18,16 @@
         <title>Tutorifull</title>
     </head>
     <body>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-81413118-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
         <div class="page-column column cross-centered">
             <div class="title-header row justify-centered cross-centered">
                 <h1>Tutorifull</h1>
