--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -123,5 +123,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" src={{ url_for('static', filename='js/tutorifull.min.js') }}></script>
+<script async type="text/javascript" src={{ url_for('static', filename='js/tutorifull.min.js') }}></script>
 {% endblock %}
