--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="description" content="Get alerts when a UNSW class has a free spot.">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/tutorifull.min.css') }}">
+        <link rel="stylesheet" href="{{ asset_url('css/tutorifull.min.css') }}">
         <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}">
         <link rel="icon" sizes="32x32" type="image/png" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
         <link rel="icon" sizes="16x16" type="image/png" href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
