--- a/css/tutorifull.scss
+++ b/css/tutorifull.scss
@@ -148,6 +148,7 @@ input:focus {
 }
 
 input:-webkit-autofill {
+    box-shadow: 0 0 0 1000px white inset !important;
     -webkit-box-shadow: 0 0 0 1000px white inset !important;
 }
 
