--- a/css/domework.scss
+++ b/css/domework.scss
@@ -1,31 +1,36 @@
-/* box-sizing */
+// box-sizing
 * {
     box-sizing: border-box;
 }
 
-/* grid model classes */
+// grid model classes
 .row {
-    width: 100%;
     display: flex;
+    width: 100%;
 }
+
 .column {
-    min-height: 100%;
     display: flex;
     flex-direction: column;
+    min-height: 100%;
 }
 
 .justify-end {
     justify-content: flex-end;
 }
+
 .justify-centered {
     justify-content: center;
 }
+
 .justify-space-between {
     justify-content: space-between;
 }
+
 .justify-space-around {
     justify-content: space-around;
 }
+
 .cross-centered {
     align-items: center;
 }
@@ -33,36 +38,47 @@
 .col-1 {
     width: 8.33%;
 }
+
 .col-2 {
     width: 16.66%;
 }
+
 .col-3 {
     width: 25%;
 }
+
 .col-4 {
     width: 33.33%;
 }
+
 .col-5 {
     width: 41.66%;
 }
+
 .col-6 {
     width: 50%;
 }
+
 .col-7 {
     width: 58.33%;
 }
+
 .col-8 {
     width: 66.66%;
 }
+
 .col-9 {
     width: 75%;
 }
+
 .col-10 {
     width: 83.33%;
 }
+
 .col-11 {
     width: 91.66%;
 }
+
 .col-12 {
     width: 100%;
 }
