Update message to credit author

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
         </div>
         <footer>
             <div class="row justify-centered">
-                <div>Made by a Dome</div>
+                <div>Code originally by: <a href="https://chybby.com/">Adam Chyb</a> | this version can be found at: <a href="https://github.com/daniel-hocking/Tutorifull">github.com/daniel-hocking/Tutorifull</a></div>
             </div>
         </footer>
         {% block scripts %}{% endblock %}
